<resources>
    <string name="app_name">Animations</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_out">Fade Out</string>
    <string name="slide_right">Slide Right</string>
    <string name="slide_left">Slide Left</string>
    <string name="slide_up">Slide up</string>
    <string name="zoom_in_fade_in">Zoom In + Fade In</string>
    <string name="slide_down">Slide Down</string>
    <string name="zoom_out_fade_out">Zoom Out + Fade Out</string>
    <string name="rotate">Rotate</string>
    <string name="move">Move</string>
</resources>