<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/demoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/demo_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <Button
                    android:id="@+id/button_zoom_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/zoom_in"/>

                <Button
                    android:id="@+id/button_zoom_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/zoom_out" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <Button
                    android:id="@+id/button_fade_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/fade_in"/>

                <Button
                    android:id="@+id/button_fade_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/fade_out" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <Button
                    android:id="@+id/button_slide_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/slide_left"/>

                <Button
                    android:id="@+id/button_slide_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/slide_right" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <Button
                    android:id="@+id/button_slide_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/slide_up"/>

                <Button
                    android:id="@+id/button_slide_down"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/slide_down" />

            </TableRow>
            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <Button
                    android:id="@+id/button_zoom_fade_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/zoom_in_fade_in"/>

                <Button
                    android:id="@+id/button_zoom_fade_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/zoom_out_fade_out" />

            </TableRow>
            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <Button
                    android:id="@+id/button_rotate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/rotate"/>

                <Button
                    android:id="@+id/button_move"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/move" />

            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>